fix css spacing whoops

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,11 @@ body {
 	white-space: nowrap;
 }
 
+p:empty {
+	margin-bottom: 2em;
+	margin-top: 2em;
+}
+
 h1, h2, h3 {
 	font-size: 16px;
 	font-weight: normal;
